// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`layout metrics (sizing harness) metrics: density-compact-flat 1`] = `
{
  "axisHeight": 32,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 74,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 710,
    },
  ],
  "forestWidth": 710,
  "headerHeight": 29,
  "labelWidth": 74,
  "plotHeight": 120,
  "rows": [
    {
      "depth": 0,
      "height": 20,
      "index": 0,
      "kind": "data",
      "markerCenter": 10,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 20,
      "index": 1,
      "kind": "data",
      "markerCenter": 30,
      "top": 20,
    },
    {
      "depth": 0,
      "height": 20,
      "index": 2,
      "kind": "data",
      "markerCenter": 50,
      "top": 40,
    },
    {
      "depth": 0,
      "height": 20,
      "index": 3,
      "kind": "data",
      "markerCenter": 70,
      "top": 60,
    },
    {
      "depth": 0,
      "height": 20,
      "index": 4,
      "kind": "data",
      "markerCenter": 90,
      "top": 80,
    },
    {
      "depth": 0,
      "height": 20,
      "index": 5,
      "kind": "data",
      "markerCenter": 110,
      "top": 100,
    },
  ],
  "rowsHeight": 120,
  "spacing": {
    "axisGap": 8,
    "cellPaddingX": 8,
    "cellPaddingY": 0,
    "headerHeight": 26,
    "indentPerLevel": 14,
    "padding": 8,
    "rowGroupPadding": 0,
    "rowHeight": 20,
  },
  "totalHeight": 207,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: density-comfortable-flat 1`] = `
{
  "axisHeight": 32,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 78,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 698,
    },
  ],
  "forestWidth": 698,
  "headerHeight": 32,
  "labelWidth": 78,
  "plotHeight": 144,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "index": 0,
      "kind": "data",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 2,
      "kind": "data",
      "markerCenter": 60,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 3,
      "kind": "data",
      "markerCenter": 84,
      "top": 72,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 4,
      "kind": "data",
      "markerCenter": 108,
      "top": 96,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 5,
      "kind": "data",
      "markerCenter": 132,
      "top": 120,
    },
  ],
  "rowsHeight": 144,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 0,
    "rowHeight": 24,
  },
  "totalHeight": 250,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: density-spacious-flat 1`] = `
{
  "axisHeight": 32,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 86,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 682,
    },
  ],
  "forestWidth": 682,
  "headerHeight": 40,
  "labelWidth": 86,
  "plotHeight": 180,
  "rows": [
    {
      "depth": 0,
      "height": 30,
      "index": 0,
      "kind": "data",
      "markerCenter": 15,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 30,
      "index": 1,
      "kind": "data",
      "markerCenter": 45,
      "top": 30,
    },
    {
      "depth": 0,
      "height": 30,
      "index": 2,
      "kind": "data",
      "markerCenter": 75,
      "top": 60,
    },
    {
      "depth": 0,
      "height": 30,
      "index": 3,
      "kind": "data",
      "markerCenter": 105,
      "top": 90,
    },
    {
      "depth": 0,
      "height": 30,
      "index": 4,
      "kind": "data",
      "markerCenter": 135,
      "top": 120,
    },
    {
      "depth": 0,
      "height": 30,
      "index": 5,
      "kind": "data",
      "markerCenter": 165,
      "top": 150,
    },
  ],
  "rowsHeight": 180,
  "spacing": {
    "axisGap": 16,
    "cellPaddingX": 14,
    "cellPaddingY": 0,
    "headerHeight": 40,
    "indentPerLevel": 20,
    "padding": 16,
    "rowGroupPadding": 0,
    "rowHeight": 30,
  },
  "totalHeight": 312,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: density-compact-overall 1`] = `
{
  "axisHeight": 32,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 74,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 710,
    },
  ],
  "forestWidth": 710,
  "headerHeight": 29,
  "labelWidth": 74,
  "plotHeight": 130,
  "rows": [
    {
      "depth": 0,
      "height": 20,
      "index": 0,
      "kind": "data",
      "markerCenter": 10,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 20,
      "index": 1,
      "kind": "data",
      "markerCenter": 30,
      "top": 20,
    },
    {
      "depth": 0,
      "height": 20,
      "index": 2,
      "kind": "data",
      "markerCenter": 50,
      "top": 40,
    },
    {
      "depth": 0,
      "height": 20,
      "index": 3,
      "kind": "data",
      "markerCenter": 70,
      "top": 60,
    },
    {
      "depth": 0,
      "height": 20,
      "index": 4,
      "kind": "data",
      "markerCenter": 90,
      "top": 80,
    },
  ],
  "rowsHeight": 100,
  "spacing": {
    "axisGap": 8,
    "cellPaddingX": 8,
    "cellPaddingY": 0,
    "headerHeight": 26,
    "indentPerLevel": 14,
    "padding": 8,
    "rowGroupPadding": 0,
    "rowHeight": 20,
  },
  "totalHeight": 217,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: density-comfortable-overall 1`] = `
{
  "axisHeight": 32,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 78,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 698,
    },
  ],
  "forestWidth": 698,
  "headerHeight": 32,
  "labelWidth": 78,
  "plotHeight": 156,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "index": 0,
      "kind": "data",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 2,
      "kind": "data",
      "markerCenter": 60,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 3,
      "kind": "data",
      "markerCenter": 84,
      "top": 72,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 4,
      "kind": "data",
      "markerCenter": 108,
      "top": 96,
    },
  ],
  "rowsHeight": 120,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 0,
    "rowHeight": 24,
  },
  "totalHeight": 262,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: density-spacious-overall 1`] = `
{
  "axisHeight": 32,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 86,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 682,
    },
  ],
  "forestWidth": 682,
  "headerHeight": 40,
  "labelWidth": 86,
  "plotHeight": 195,
  "rows": [
    {
      "depth": 0,
      "height": 30,
      "index": 0,
      "kind": "data",
      "markerCenter": 15,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 30,
      "index": 1,
      "kind": "data",
      "markerCenter": 45,
      "top": 30,
    },
    {
      "depth": 0,
      "height": 30,
      "index": 2,
      "kind": "data",
      "markerCenter": 75,
      "top": 60,
    },
    {
      "depth": 0,
      "height": 30,
      "index": 3,
      "kind": "data",
      "markerCenter": 105,
      "top": 90,
    },
    {
      "depth": 0,
      "height": 30,
      "index": 4,
      "kind": "data",
      "markerCenter": 135,
      "top": 120,
    },
  ],
  "rowsHeight": 150,
  "spacing": {
    "axisGap": 16,
    "cellPaddingX": 14,
    "cellPaddingY": 0,
    "headerHeight": 40,
    "indentPerLevel": 20,
    "padding": 16,
    "rowGroupPadding": 0,
    "rowHeight": 30,
  },
  "totalHeight": 327,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: wrap-compact 1`] = `
{
  "axisHeight": 32,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 400,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 384,
    },
  ],
  "forestWidth": 384,
  "headerHeight": 29,
  "labelWidth": 400,
  "plotHeight": 60,
  "rows": [
    {
      "depth": 0,
      "height": 20,
      "index": 0,
      "kind": "data",
      "markerCenter": 10,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 20,
      "index": 1,
      "kind": "data",
      "markerCenter": 30,
      "top": 20,
    },
    {
      "depth": 0,
      "height": 20,
      "index": 2,
      "kind": "data",
      "markerCenter": 50,
      "top": 40,
    },
  ],
  "rowsHeight": 60,
  "spacing": {
    "axisGap": 8,
    "cellPaddingX": 8,
    "cellPaddingY": 0,
    "headerHeight": 26,
    "indentPerLevel": 14,
    "padding": 8,
    "rowGroupPadding": 0,
    "rowHeight": 20,
  },
  "totalHeight": 147,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: wrap-comfortable 1`] = `
{
  "axisHeight": 32,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 400,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 376,
    },
  ],
  "forestWidth": 376,
  "headerHeight": 32,
  "labelWidth": 400,
  "plotHeight": 72,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "index": 0,
      "kind": "data",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 2,
      "kind": "data",
      "markerCenter": 60,
      "top": 48,
    },
  ],
  "rowsHeight": 72,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 0,
    "rowHeight": 24,
  },
  "totalHeight": 178,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: wrap-spacious 1`] = `
{
  "axisHeight": 32,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 400,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 368,
    },
  ],
  "forestWidth": 368,
  "headerHeight": 40,
  "labelWidth": 400,
  "plotHeight": 90,
  "rows": [
    {
      "depth": 0,
      "height": 30,
      "index": 0,
      "kind": "data",
      "markerCenter": 15,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 30,
      "index": 1,
      "kind": "data",
      "markerCenter": 45,
      "top": 30,
    },
    {
      "depth": 0,
      "height": 30,
      "index": 2,
      "kind": "data",
      "markerCenter": 75,
      "top": 60,
    },
  ],
  "rowsHeight": 90,
  "spacing": {
    "axisGap": 16,
    "cellPaddingX": 14,
    "cellPaddingY": 0,
    "headerHeight": 40,
    "indentPerLevel": 20,
    "padding": 16,
    "rowGroupPadding": 0,
    "rowHeight": 30,
  },
  "totalHeight": 222,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: indent-depths 1`] = `
{
  "axisHeight": 32,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 111,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 665,
    },
  ],
  "forestWidth": 665,
  "headerHeight": 32,
  "labelWidth": 111,
  "plotHeight": 96,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "index": 0,
      "kind": "data",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 2,
      "kind": "data",
      "markerCenter": 60,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 3,
      "kind": "data",
      "markerCenter": 84,
      "top": 72,
    },
  ],
  "rowsHeight": 96,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 0,
    "rowHeight": 24,
  },
  "totalHeight": 202,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: spacers 1`] = `
{
  "axisHeight": 32,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 135,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 641,
    },
  ],
  "forestWidth": 641,
  "headerHeight": 32,
  "labelWidth": 135,
  "plotHeight": 84,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "index": 0,
      "kind": "data",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 0,
      "height": 12,
      "index": 2,
      "kind": "spacer",
      "markerCenter": 54,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 3,
      "kind": "data",
      "markerCenter": 72,
      "top": 60,
    },
  ],
  "rowsHeight": 84,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 0,
    "rowHeight": 24,
  },
  "totalHeight": 190,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: groups-compact 1`] = `
{
  "axisHeight": 32,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 106,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 678,
    },
  ],
  "forestWidth": 678,
  "headerHeight": 29,
  "labelWidth": 106,
  "plotHeight": 120,
  "rows": [
    {
      "depth": 0,
      "height": 20,
      "index": 0,
      "kind": "group_header",
      "markerCenter": 10,
      "top": 0,
    },
    {
      "depth": 1,
      "height": 20,
      "index": 1,
      "kind": "data",
      "markerCenter": 30,
      "top": 20,
    },
    {
      "depth": 1,
      "height": 20,
      "index": 2,
      "kind": "data",
      "markerCenter": 50,
      "top": 40,
    },
    {
      "depth": 0,
      "height": 20,
      "index": 3,
      "kind": "group_header",
      "markerCenter": 70,
      "top": 60,
    },
    {
      "depth": 1,
      "height": 20,
      "index": 4,
      "kind": "data",
      "markerCenter": 90,
      "top": 80,
    },
    {
      "depth": 1,
      "height": 20,
      "index": 5,
      "kind": "data",
      "markerCenter": 110,
      "top": 100,
    },
  ],
  "rowsHeight": 120,
  "spacing": {
    "axisGap": 8,
    "cellPaddingX": 8,
    "cellPaddingY": 0,
    "headerHeight": 26,
    "indentPerLevel": 14,
    "padding": 8,
    "rowGroupPadding": 0,
    "rowHeight": 20,
  },
  "totalHeight": 207,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: groups-comfortable 1`] = `
{
  "axisHeight": 32,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 110,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 666,
    },
  ],
  "forestWidth": 666,
  "headerHeight": 32,
  "labelWidth": 110,
  "plotHeight": 144,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "index": 0,
      "kind": "group_header",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 1,
      "height": 24,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 1,
      "height": 24,
      "index": 2,
      "kind": "data",
      "markerCenter": 60,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 3,
      "kind": "group_header",
      "markerCenter": 84,
      "top": 72,
    },
    {
      "depth": 1,
      "height": 24,
      "index": 4,
      "kind": "data",
      "markerCenter": 108,
      "top": 96,
    },
    {
      "depth": 1,
      "height": 24,
      "index": 5,
      "kind": "data",
      "markerCenter": 132,
      "top": 120,
    },
  ],
  "rowsHeight": 144,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 0,
    "rowHeight": 24,
  },
  "totalHeight": 250,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: groups-spacious 1`] = `
{
  "axisHeight": 32,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 118,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 650,
    },
  ],
  "forestWidth": 650,
  "headerHeight": 40,
  "labelWidth": 118,
  "plotHeight": 180,
  "rows": [
    {
      "depth": 0,
      "height": 30,
      "index": 0,
      "kind": "group_header",
      "markerCenter": 15,
      "top": 0,
    },
    {
      "depth": 1,
      "height": 30,
      "index": 1,
      "kind": "data",
      "markerCenter": 45,
      "top": 30,
    },
    {
      "depth": 1,
      "height": 30,
      "index": 2,
      "kind": "data",
      "markerCenter": 75,
      "top": 60,
    },
    {
      "depth": 0,
      "height": 30,
      "index": 3,
      "kind": "group_header",
      "markerCenter": 105,
      "top": 90,
    },
    {
      "depth": 1,
      "height": 30,
      "index": 4,
      "kind": "data",
      "markerCenter": 135,
      "top": 120,
    },
    {
      "depth": 1,
      "height": 30,
      "index": 5,
      "kind": "data",
      "markerCenter": 165,
      "top": 150,
    },
  ],
  "rowsHeight": 180,
  "spacing": {
    "axisGap": 16,
    "cellPaddingX": 14,
    "cellPaddingY": 0,
    "headerHeight": 40,
    "indentPerLevel": 20,
    "padding": 16,
    "rowGroupPadding": 0,
    "rowHeight": 30,
  },
  "totalHeight": 312,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: mixed-columns 1`] = `
{
  "axisHeight": 32,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 78,
    },
    {
      "id": "n",
      "type": "numeric",
      "width": 60,
    },
    {
      "id": "grade",
      "type": "badge",
      "width": 74,
    },
    {
      "id": "pct",
      "type": "bar",
      "width": 100,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 464,
    },
  ],
  "forestWidth": 464,
  "headerHeight": 32,
  "labelWidth": 78,
  "plotHeight": 120,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "index": 0,
      "kind": "data",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 2,
      "kind": "data",
      "markerCenter": 60,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 3,
      "kind": "data",
      "markerCenter": 84,
      "top": 72,
    },
    {
      "depth": 0,
      "height": 24,
      "index": 4,
      "kind": "data",
      "markerCenter": 108,
      "top": 96,
    },
  ],
  "rowsHeight": 120,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 0,
    "rowHeight": 24,
  },
  "totalHeight": 226,
  "totalWidth": 800,
}
`;
